# scrapy-crawler

./: pyproject.toml
test/tutorial/: items.py  settings.py
test/tutorial/spiders/: vmall.py
