[tool.poetry]
name = "scrapy-crawler"
version = "0.1.0"
description = ""
authors = ["jongsangkuun <tmclzns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy-splash = "^0.9.0"
scrapy = "^2.11.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
